--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   email_auth: ^1.0.0
   otp_text_field: ^1.1.3
   awesome_dialog: ^3.0.2
+  razorpay_flutter: ^1.3.4
+  http: ^0.13.5
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.10
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
