--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.10
   top_snackbar_flutter: ^3.0.0+1
+  clipboard: ^0.1.3
+  snack: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
